fixed control spacing

--- a/projects/angular-extensions/controls/base-control/base-control.component.scss
+++ b/projects/angular-extensions/controls/base-control/base-control.component.scss
@@ -33,6 +33,13 @@
         }
       }
 
+
+      &.mat-form-field-appearance-fill {
+        .mat-form-field-subscript-wrapper {
+          margin: 0 !important;
+        }
+      }
+
       .mat-form-field-wrapper {
         padding-bottom: 0.25rem;
       }
